kubernetes/apps/default/misc-ingress/app/ingress-internal-obi.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obi
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: obico.png
    gethomepage.dev/name: Obico
    gethomepage.dev/group: Other
    gethomepage.dev/description: 3D Print Manager
spec:
  ingressClassName: internal
  rules:
    - host: &host "obi.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obi
                port:
                  number: 3334
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: obi
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: http
        port: 3334
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: obi
spec:
  ports:
    - name: http
      port: 3334
  type: ClusterIP
